Remove runArgs from devcontainer configuration

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,4 @@
 {
   "name": "nix-dockyard",
-  "image": "nixos/nix:latest",
-  "runArgs": [
-    "--privileged"
-  ]
+  "image": "nixos/nix:latest"
 }
